--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "splitpanes": "^2.0.0",
     "vue": "^2.6.10",
     "vuetify": "^2.1.0"
   },
@@ -23,6 +24,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
+    "eslint-plugin-only-warn": "^1.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.5",
     "lint-staged": "^9.4.2",
