--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "splitpanes": "^2.0.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "^2.1.0"
   },
