--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inspector",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "copy-text-to-clipboard": "^2.1.1",
     "core-js": "^3.3.2",
+    "filesize": "^6.0.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
     "splitpanes": "^2.0.0",
+    "tiny-save-as": "^1.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-chat-scroll": "^1.3.6",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "^2.1.0"
   },
