--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "copy-text-to-clipboard": "^2.1.1",
     "core-js": "^3.3.2",
     "filesize": "^6.0.1",
+    "highlight.js": "^9.16.2",
     "lodash": "^4.17.15",
     "splitpanes": "^2.0.0",
     "tiny-save-as": "^1.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-chat-scroll": "^1.3.6",
+    "vue-highlightjs": "^1.3.3",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "^2.1.0"
   },
