--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue-chat-scroll": "^1.3.6",
     "vue-highlightjs": "^1.3.3",
     "vue2-ace-editor": "0.0.15",
-    "vuetify": "^2.2.17"
+    "vuetify": "2.1.18"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
