--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inspector",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -58,7 +58,7 @@
     "last 2 versions"
   ],
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-push": "lint-staged"
   },
   "lint-staged": {
     "*.{js,vue}": [
