--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -23,4 +23,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag_name="${GITHUB_REF##*/}"
-          hub release edit $(find . -maxdepth 1 -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.snap" \) -printf "-a \"%p\" ") -m "" "$tag_name"
+          hub release edit $(find . -maxdepth 1 -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.snap" \) -printf "-a %p ") -m "" "$tag_name"
