--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -23,4 +23,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           tag_name="${GITHUB_REF##*/}"
+          echo $(find . -maxdepth 1 -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.snap" \) -printf "-a %p ")
           hub release edit $(find . -maxdepth 1 -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.snap" \) -printf "-a %p ") -m "" "$tag_name"
