--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "lodash": "^4.17.20",
     "splitpanes": "^2.2.1",
     "tiny-save-as": "^1.0.0",
+    "v-mask": "^2.2.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-chat-scroll": "^1.4.0",
     "vue-highlightjs": "^1.3.3",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "2.1.18"
