--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
   "name": "inspector",
-  "version": "1.6.1",
-  "private": true,
+  "version": "1.7.0",
+  "author": {
+    "name": "Carlos Enumo",
+    "email": "paker_wreah@hotmail.com",
+    "url": "https://github.com/pakerwreah"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "copy-text-to-clipboard": "^2.2.0",
     "core-js": "^3.6.5",
+    "electron-window-state": "^5.0.3",
     "filesize": "^6.1.0",
     "fuzzysort": "^1.1.4",
     "highlight.js": "^10.1.2",
     "lodash": "^4.17.20",
     "splitpanes": "^2.2.1",
     "tiny-save-as": "^1.0.0",
+    "v-mask": "^2.2.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-chat-scroll": "^1.4.0",
     "vue-highlightjs": "^1.3.3",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "2.1.18"
@@ -31,6 +40,8 @@
     "@vue/cli-service": "^4.5.3",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "electron": "^9.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.7.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
@@ -44,6 +55,7 @@
     "release-it": "^13.6.7",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.6.0"
@@ -65,5 +77,6 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "main": "background.js"
 }
