--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inspector",
-  "version": "1.7.4",
+  "version": "1.8.0",
   "author": {
     "name": "Carlos Enumo",
     "email": "paker_wreah@hotmail.com",
@@ -16,49 +16,56 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "copy-text-to-clipboard": "^2.2.0",
-    "core-js": "^3.6.5",
+    "axios": "^0.27.2",
+    "copy-text-to-clipboard": "^3.0.1",
+    "core-js": "^3.25.1",
     "electron-window-state": "^5.0.3",
-    "filesize": "^6.1.0",
-    "fuzzysort": "^1.1.4",
-    "highlight.js": "^10.1.2",
-    "lodash": "^4.17.20",
-    "splitpanes": "^2.3.6",
-    "tiny-save-as": "^1.0.0",
-    "v-mask": "^2.2.3",
-    "vue": "^2.6.11",
+    "filesize": "^9.0.11",
+    "fuzzysort": "^2.0.1",
+    "highlight.js": "^11.6.0",
+    "lodash": "^4.17.21",
+    "splitpanes": "^2.4.1",
+    "tiny-save-as": "^1.0.2",
+    "v-mask": "^2.3.0",
+    "vue": "^2.7.10",
     "vue-axios": "^2.1.5",
     "vue-highlightjs": "^1.3.3",
     "vue2-ace-editor": "0.0.15",
     "vuetify": "2.1.18"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.159",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-eslint": "^4.5.3",
-    "@vue/cli-service": "^4.5.3",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "electron": "^9.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "eslint": "^7.7.0",
-    "eslint-plugin-import": "^2.22.0",
+    "@babel/eslint-parser": "^7.18.9",
+    "@types/lodash": "^4.14.184",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "electron": "^20.1.2",
+    "electron-builder": "^23.3.3",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "8.22.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-only-warn": "^1.0.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "eslint-plugin-vuetify": "^1.0.0-beta.7",
-    "lint-staged": "^10.2.11",
-    "node-sass": "^4.14.1",
-    "release-it": "^13.6.7",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0"
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vuetify": "^1.1.0",
+    "lint-staged": "^13.0.3",
+    "node-sass": "^7.0.3",
+    "release-it": "^15.4.1",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
+    "vue-cli-plugin-vuetify": "^2.5.5",
+    "vue-template-compiler": "^2.7.10",
+    "vuetify-loader": "^1.9.2",
+    "webpack": "^5.74.0"
+  },
+  "overrides": {
+    "vue-cli-plugin-electron-builder": {
+      "electron-builder": "^23.3.3"
+    }
   },
   "postcss": {
     "plugins": {
