--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inspector",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "author": {
     "name": "Carlos Enumo",
     "email": "paker_wreah@hotmail.com",
@@ -16,6 +16,7 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@mdi/font": "^6.9.96",
     "axios": "^0.27.2",
     "copy-text-to-clipboard": "^3.0.1",
     "core-js": "^3.25.1",
