--- a/package.json
+++ b/package.json
@@ -1,90 +1,64 @@
 {
   "name": "inspector",
-  "version": "1.8.1",
-  "author": {
-    "name": "Carlos Enumo",
-    "email": "paker_wreah@hotmail.com",
-    "url": "https://github.com/pakerwreah"
+  "version": "2.0.0",
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix --cache"
   },
   "dependencies": {
-    "@mdi/font": "^6.9.96",
-    "axios": "^0.27.2",
-    "copy-text-to-clipboard": "^3.0.1",
-    "core-js": "^3.25.1",
-    "electron-window-state": "^5.0.3",
-    "filesize": "^9.0.11",
-    "fuzzysort": "^2.0.1",
-    "highlight.js": "^11.6.0",
+    "@fontsource/roboto": "^5.2.9",
+    "@highlightjs/vue-plugin": "^2.1.0",
+    "@mdi/font": "^7.4.47",
+    "ace-builds": "^1.43.5",
+    "axios": "^1.13.2",
+    "copy-text-to-clipboard": "^3.2.2",
+    "filesize": "^11.0.13",
+    "fuzzysort": "^3.1.0",
     "lodash": "^4.17.21",
-    "splitpanes": "^2.4.1",
+    "maska": "^3.2.0",
+    "splitpanes": "^4.0.4",
     "tiny-save-as": "^1.0.2",
-    "v-mask": "^2.3.0",
-    "vue": "^2.7.10",
-    "vue-axios": "^2.1.5",
-    "vue-highlightjs": "^1.3.3",
-    "vue2-ace-editor": "0.0.15",
-    "vuetify": "2.1.18"
+    "vue": "^3.5.25",
+    "vue3-ace-editor": "^2.2.4"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
-    "@types/lodash": "^4.14.184",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-standard": "^8.0.1",
-    "electron": "^20.1.2",
-    "electron-builder": "^23.3.3",
-    "electron-devtools-installer": "^3.2.0",
-    "eslint": "8.22.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-only-warn": "^1.0.3",
-    "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^9.4.0",
-    "eslint-plugin-vuetify": "^1.1.0",
-    "lint-staged": "^13.0.3",
-    "node-sass": "^7.0.3",
-    "release-it": "^15.4.1",
-    "sass": "^1.54.9",
-    "sass-loader": "^13.0.2",
-    "vue-cli-plugin-electron-builder": "^2.1.1",
-    "vue-cli-plugin-vuetify": "^2.5.5",
-    "vue-template-compiler": "^2.7.10",
-    "vuetify-loader": "^1.9.2",
-    "webpack": "^5.74.0"
+    "@tsconfig/node24": "^24.0.3",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^24.10.1",
+    "@types/splitpanes": "^2.2.6",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "~10.5.1",
+    "jiti": "^2.6.1",
+    "npm-run-all2": "^8.0.4",
+    "prettier": "3.6.2",
+    "sass-embedded": "^1.93.3",
+    "typescript": "~5.9.0",
+    "vite": "^7.2.4",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-plugin-vuetify": "^2.1.2",
+    "vue-tsc": "^3.1.5",
+    "vuetify": "^3.11.2"
   },
   "overrides": {
+    "@types/splitpanes": {
+      "vue": "^3.0.0"
+    },
     "vue-cli-plugin-electron-builder": {
-      "electron-builder": "^23.3.3"
+      "electron-builder": "^26.0.12"
     }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "gitHooks": {
-    "pre-push": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
-  },
-  "main": "background.js"
+  }
 }
