--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ace-builds": "^1.43.5",
     "axios": "^1.13.2",
     "copy-text-to-clipboard": "^3.2.2",
+    "fflate": "^0.8.2",
     "filesize": "^11.0.13",
     "fuzzysort": "^3.1.0",
     "lodash": "^4.17.21",
