--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "allowJs": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
 
     "paths": {
       "@/*": ["./src/*"]
