--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "lint": "run-s type-check eslint",
     "electron:dev": "electron-vite dev",
     "electron:build": "electron-vite build && electron-builder --config",
-    "electron:build:mac": "run-s electron:build -- --mac",
-    "electron:build:win": "run-s electron:build -- --win",
-    "electron:build:linux": "run-s electron:build -- --linux"
+    "electron:build:mac": "npm run electron:build -- --mac",
+    "electron:build:win": "npm run electron:build -- --win",
+    "electron:build:linux": "npm run electron:build -- --linux"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
